salesforce_sfdx/main/default/objects/Eligibility_History__c/fields/Coverage_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Entry_Date__c</fullName>
    <label>Coverage Entry Date</label>
    <type>Date</type>
</CustomField>