salesforce_sfdx/main/default/objects/Eligibility_History__c/fields/Eligibility_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Change_Reason__c</fullName>
    <label>Eligibility Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>