salesforce_sfdx/main/default/objects/Eligibility_History__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eligibility Histories</relationshipLabel>
    <relationshipName>Eligibility_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>