salesforce_sfdx/main/default/objects/Eligibility_History__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Eligibility_History__c</referenceTo>
    <relationshipLabel>Eligibility Histories</relationshipLabel>
    <relationshipName>Child_Eligibility_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>