salesforce_sfdx/main/default/objects/Eligibility_History__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>MemberPlan</referenceTo>
    <relationshipLabel>Eligibility History</relationshipLabel>
    <relationshipName>Eligibility_History</relationshipName>
    <type>Lookup</type>
</CustomField>