salesforce_sfdx/main/default/objects/Eligibility_History__c/fields/Pre_Existing_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Effective_Date__c</fullName>
    <label>Pre Existing Effective Date</label>
    <type>Date</type>
</CustomField>