salesforce_sfdx/main/default/objects/Eligibility_History__c/fields/Tobacoo_Use__c.field-meta.xml
<CustomField>
    <fullName>Tobacoo_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tobacco Use</label>
    <type>Checkbox</type>
</CustomField>