salesforce_sfdx/main/default/objects/Eligibility_History__c/recordTypes/Member_Plan.recordType-meta.xml
<RecordType>
    <fullName>Member_Plan</fullName>
    <active>true</active>
    <description>Used this create Eligibility History related to Member Plan</description>
    <label>Member Plan</label>
</RecordType>