salesforce_sfdx/main/default/objects/Eligibility_History__c/recordTypes/Riders_Surcharges.recordType-meta.xml
<RecordType>
    <fullName>Riders_Surcharges</fullName>
    <active>true</active>
    <description>Use this to create Eligibility History related to Riders &amp; Surcharges</description>
    <label>Riders &amp; Surcharges</label>
</RecordType>